[update] 이미지첨부기능 register, getList, getDetail, update, delete 수정 & 테스트 완료